<resources>
    <string name="app_name">GHS Client Simulator</string>
    <string name="found_devices_scanning">Found devices (tap to connect):</string>
    <string name="found_devices_not_scanning">Start scanning to discover devices…</string>
    <string name="connected_devices">Connected devices (tap name for info):</string>
    <string name="observations">Observations log</string>
    <string name="start_scanning">Start scanning</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="show_log">Log</string>
    <string name="show_racp">RACP</string>
    <string name="users">Users</string>
    <string name="received_observations">Received observations:</string>
    <string name="clear_log">Clear logs</string>
    <string name="scroll_app_log">Scroll App</string>
    <string name="scroll_obs_log">Scroll Obs</string>
    <string name="parseTestObservation">Parse test observation</string>
    <string name="fhir_server">FHIR</string>
    <string name="ets">ETS</string>
    <string name="post_observations_to_servier">Post observations to server</string>
    <string name="use_public_hapi_fhir_server">Use hapi.fhir.org server</string>
    <string name="connect_devices_with_bonding">Bond with devices</string>
    <string name="title_activity_fhir">FHIR server settings</string>
    <string name="title_activity_racp">RACP Details</string>
    <string name="title_activity_users">Users</string>
    <string name="new_user">New user</string>
    <string name="set_user">Set current</string>
    <string name="delete_user">Delete current</string>
    <string name="delete_user_data">Delete current data</string>
    <string name="read_current_user">Read current</string>
    <string name="no_observation">No observations received</string>
    <string name="no_temp_observation">No temperature received</string>
    <string name="no_hr_observation">No heart rate received</string>
    <string name="no_spo2_observation">No SpO2 received</string>
    <string name="no_bp_observation">No Blood pressure received</string>
    <string name="no_ppg_observation">No PPG Waveform</string>
    <string name="disconnect_peripheral">Disconnect</string>
    <string name="enable_disconnect_peripheral">EnableDisco</string>
    <string name="enable_live_observatioins">Enable Obs</string>
    <string name="send_invalid_command">Invld Cmd</string>
    <string name="disable_live_observatioins">Disable Obs</string>
    <string name="write_observation_schedule">Write Obs Schedule</string>
    <string name="private_hapi_server_url_label">Private HAPI Server URL:</string>
    <string name="save_url">Save URL</string>
    <string name="ets_bytes">Log ETS</string>
    <string name="set_ets_bytes">Set ETS</string>
    <string name="reset_tick_counter">Reset tick counter</string>
    <string name="revert_url">Revert URL</string>
    <string name="totalRecords"># Recs</string>
    <string name="aboveRecords"># Rec >= </string>
    <string name="belowRecords"># Rec LE </string>
    <string name="deleteAll">Del All</string>
    <string name="deleteAbove">Del >= </string>
    <string name="deleteBelow">Del LE </string>
    <string name="deleteFirst">Del First</string>
    <string name="deleteLast">Del Last </string>
    <string name="getAllRecords">All</string>
    <string name="getRecordsAbove">>= </string>
    <string name="getRecordsBelow">LE </string>
    <string name="abort">Abort</string>
    <string name="use_indicate">Use Indicate</string>
    <string name="use_date">Date query</string>
</resources>