<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FhirActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <android.widget.Switch
            android:id="@+id/postObservationsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="togglePostObservations"
            android:layout_marginBottom="24dp"
            android:text="@string/post_observations_to_servier"
            android:textSize="16sp"/>
        <android.widget.Switch
            android:id="@+id/publicHapiSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="togglePublicHapi"
            android:layout_marginBottom="24dp"
            android:text="@string/use_public_hapi_fhir_server"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_hapi_server_url_label"
            android:textSize="20sp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/hapiServerUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textUri" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <Button
                android:id="@+id/saveUrlButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:text="@string/save_url"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:onClick="saveUrl" />
            <Button
                android:id="@+id/revertUrlButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:text="@string/revert_url"
                android:textAllCaps="false"
                android:onClick="revertUrl"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>