<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="1"
        android:orientation="vertical">
        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/start_scanning"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:onClick="toggleScanning" />
        <TextView
            android:id="@+id/foundPeripheralLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/found_devices_not_scanning"
            android:layout_marginBottom="16dp" />
        <ListView
            android:id="@+id/foundPeripheralList"
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_marginBottom="16dp"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connected_devices"
            android:layout_marginBottom="16dp" />
        <ListView
            android:id="@+id/connectedPeripheralList"
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="0dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_marginBottom="16dp" />
        <TextView
            android:id="@+id/observationsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observations"
            android:layout_marginBottom="16dp" />
        <TextView
            android:id="@+id/observationsLog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:scrollbars="vertical"
            android:gravity="bottom"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />
        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp">
            <Button
                android:id="@+id/showLogButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:text="@string/show_log"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:onClick="showObservationLog" />
            <Button
                android:id="@+id/fhirServerButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:text="@string/fhir_server"
                android:textAllCaps="false"
                android:onClick="openFhirSettings" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>