<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RacpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblObservationStoreCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="Stored observation record queries:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/deleteAllRecordsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/deleteAll"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:onClick="deleteAllRecords" />
            <Button
                android:id="@+id/numRecordsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalRecords"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:onClick="numberOfRecords" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtObservationStoreCount"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:layout_marginRight="32dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="Unknown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/deleteGreaterRecordsButton"
                android:layout_height="wrap_content"
                android:layout_width="96dp"
                android:layout_marginEnd="8dp"
                android:text="@string/deleteAbove"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:onClick="deleteRecordsAbove" />

            <Button
                android:id="@+id/queryRecordsButton"
                android:layout_height="wrap_content"
                android:layout_width="128dp"
                android:text="@string/aboveRecords"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:onClick="numberRecordsAbove" />

            <!-- SPACER VIEW FOR RIGHT ALIGNED CLEAR BUTTON -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtObservationGEStoreCount"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:layout_marginRight="32dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="Unknown" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteLessRecordsButton"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:onClick="deleteRecordsBelow"
                android:text="@string/deleteBelow"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/queryRecordsLEButton"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:onClick="numberRecordsBelow"
                android:text="@string/belowRecords"
                android:textAllCaps="false" />

            <!-- SPACER VIEW FOR RIGHT ALIGNED CLEAR BUTTON -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtObservationLEStoreCount"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="32dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Unknown"
                android:textSize="16sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteFirstRecordButton"
            android:layout_height="wrap_content"
            android:layout_width="128dp"
            android:layout_marginEnd="8dp"
            android:text="@string/deleteFirst"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:onClick="deleteFirstRecord" />


        <Button
            android:id="@+id/deleteLastRecordButton"
            android:layout_height="wrap_content"
            android:layout_width="128dp"
            android:layout_marginEnd="8dp"
            android:text="@string/deleteLast"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:onClick="deleteLastRecord" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblQueryStartRecord"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="Query rec #:" />

            <EditText
                android:id="@+id/txtStartRecord"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:text="5"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtEndRecord"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:text="9"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <android.widget.Switch
                android:id="@+id/useIndicateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toggleIndications"
                android:text="@string/use_indicate"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separatorColor" />

        <TextView
            android:id="@+id/lblGetObservationStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="Stored observation record queries:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- SPACER VIEW FOR RIGHT ALIGNED CLEAR BUTTON -->

        <Button
            android:id="@+id/getAllRecordsButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:textSize="10sp"
            android:onClick="getAllRecords"
            android:text="@string/getAllRecords"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getFirstButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:textSize="10sp"
            android:onClick="getFirstRecord"
            android:text="First"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getLastButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:textSize="10sp"
            android:onClick="getLastRecord"
            android:text="Last"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getRecordsBelow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:textSize="10sp"
            android:onClick="getRecordsBelow"
            android:text="@string/getRecordsBelow"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getRecordsAbove"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10sp"
            android:onClick="getRecordsAbove"
            android:text="@string/getRecordsAbove"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/obsSyncProgress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:progress="0"/>

        <Button
            android:id="@+id/abort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="abort"
            android:text="@string/abort"
            android:textAllCaps="false" />

    </LinearLayout>

        <TextView
            android:id="@+id/racpLog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>