<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UsersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/enableLiveObservations"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/enable_live_observatioins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:onClick="newUser" />

        <Button
            android:id="@+id/disableLiveObservations"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/disable_live_observatioins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:onClick="setUser" />

        <Button
            android:id="@+id/writeObservationSchedule"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/write_observation_schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:onClick="deleteUser" />

        <TextView
            android:id="@+id/usersLog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>